--- a/AndroidStudioProjects/USTHWeather/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/USTHWeather/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">USTH Weather</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">MyApp</string>
+    <string name="welcome_message">Welcome to MyApp</string>
 </resources>
